# gimp_quick_guides

./: .gitignore  LICENSE  Makefile  Makefile.in  README.md  config.h  config.h.in  config.status  configure.in  intltool-update
autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
help/: Makefile  Makefile.in
help/en/: Makefile  Makefile.in
help/images/: Makefile
po/: Makefile  Makefile.in
src/: .gitattributes  .gitignore  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  Makefile.in.bak  gimp-quick-guides  main.c  main.h  render.c
src/.deps/: interface.Po  main.Po  render.Po
